Server/esp_server/build/log/idf_py_stderr_output_41986
fatal: no submodule mapping found in .gitmodules for path 'esp-idf/components/cJSON'
fatal: no submodule mapping found in .gitmodules for path 'esp-idf/components/cJSON'
In file included from /home/zeila/Documents/CMPT496/Graphite/esp-idf/components/esp_wifi/include/esp_wifi.h:53,
                 from /home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:3:
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c: In function 'start_mdns_service':
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:43:21: error: implicit declaration of function 'mdns_init'; did you mean 'sys_init'? [-Wimplicit-function-declaration]
   43 |     ESP_ERROR_CHECK(mdns_init());
      |                     ^~~~~~~~~
/home/zeila/Documents/CMPT496/Graphite/esp-idf/components/esp_common/include/esp_err.h:116:30: note: in definition of macro 'ESP_ERROR_CHECK'
  116 |         esp_err_t err_rc_ = (x);                                        \
      |                              ^
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:44:21: error: implicit declaration of function 'mdns_hostname_set' [-Wimplicit-function-declaration]
   44 |     ESP_ERROR_CHECK(mdns_hostname_set("esp32-server"));
      |                     ^~~~~~~~~~~~~~~~~
/home/zeila/Documents/CMPT496/Graphite/esp-idf/components/esp_common/include/esp_err.h:116:30: note: in definition of macro 'ESP_ERROR_CHECK'
  116 |         esp_err_t err_rc_ = (x);                                        \
      |                              ^
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/esp_server.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5672: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
make: *** [Makefile:136: all] Error 2
